--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,8 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+  height: 100%;
+  position:relative ;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-image: linear-gradient(#D3CCE3,#E9E4F0);
 }
