--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,8 @@
   left: 0;
   background-image: linear-gradient(#D3CCE3,#E9E4F0);
 }
+
+.page1{
+  height:100vh;
+  background-image: linear-gradient(to right top, #052837, #065660, #32877c, #77b98b, #cee797);
+}
