--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,11 @@
   height:100vh;
   background-image: linear-gradient(to right top, #052837, #065660, #32877c, #77b98b, #cee797);
 }
+
+
+#test {
+padding-top: 50vh;
+
+text-align: center;
+margin-top: ;
+}
