--- a/src/Overlay.css
+++ b/src/Overlay.css
@@ -10,7 +10,7 @@
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.5);
     overflow-x: hidden;
-    transition: .75s;
+    transition: 2s;
     background-image: linear-gradient(#c94b4b,#4b134f );
     background-size:contain;
     background-position:top;
@@ -22,9 +22,9 @@
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
-    text-align: center;
-    margin-top: ;
-    color: white
+  text-align: center;
+  margin-top: ;
+  color: white
 }
 
 .overlay a {
