--- a/src/Overlay.css
+++ b/src/Overlay.css
@@ -10,11 +10,14 @@
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.5);
     overflow-x: hidden;
-    transition: 2s;
-    background-image: linear-gradient(#c94b4b,#4b134f );
+    transition: 1s;
+    background: #ed4264; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #ed4264, #ffedbc); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #ed4264, #ffedbc);
     background-size:contain;
     background-position:top;
     background: cover;
+
 }
 
 .overlay-content {
@@ -22,9 +25,10 @@
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
+  font-size: 20px !important;
   text-align: center;
   margin-top: ;
-  color: white
+  color: black !important;
 }
 
 .overlay a {
@@ -47,7 +51,9 @@
 }
 
 .overlay .closebtn {
-    position: absolute;
+    position: -webkit-sticky; /* Safari */
+    position: sticky !important;
+    top: 0;
     top: 20px;
     right: 45px;
     font-size: 60px;
@@ -74,7 +80,7 @@
 }
 
 .overlay h2, .overlay p {
-  color:white;
+  color:black;
 }
 
 .short {
