new stuff new things

--- a/src/Overlay.css
+++ b/src/Overlay.css
@@ -22,7 +22,10 @@ p {
   color: white !important;
 }
 
-
+.projects {
+  border: solid;
+  border-color: white;
+}
 .overlay-content {
   position: fixed;
   top: 40%;
