--- a/src/Overlay.css
+++ b/src/Overlay.css
@@ -14,7 +14,7 @@
     background-size:contain;
     background-position:top;
     background: cover;
-    overflow:visible;
+    overflow:hidden !important;
 
 }
 .center {
@@ -43,7 +43,7 @@ p {
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 30px !important;
+  font-size: 3em !important;
   text-align: center;
   margin-top: ;
   color: white !important;
@@ -88,7 +88,8 @@ p {
   }
 
 
-@media screen and (max-height: 450px) {
+
+@media screen and (min-height: 850px) {
   .overlay a {font-size: 20px}
   .overlay .closebtn {
     font-size: 40px;
@@ -101,6 +102,9 @@ p {
   color:black;
 }
 
+.overlay-contet {
+  font-size: 10px;
+}
 .short {
   margin-top: 2%;
   text-align: center;
@@ -109,7 +113,7 @@ p {
 }
 .main {
   font-family: 'Gugi', cursive;
-  font-size: 50px;
+  font-size: 25px;
   color: white;
   text-align: center;
 }
