--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,17 @@
 
 .page1{
   height:100vh;
+  -ms-background-size: cover;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  background-size: cover;
+  width: 100%;
+
+  z-index: 1;
+  background: linear-gradient(rgba(3, 30, 0, 0.5), rgba(0, 0, 0, 1)), url('./pics/computer-computer-keyboard-contemporary-display-257881.jpg');
+  opacity:   ;
+
 }
 
 
