--- a/src/PageOne.css
+++ b/src/PageOne.css
@@ -1,20 +1,16 @@
 .page1{
   height:100vh;
   background-color: red;
-}
-.intro{
-  position: fixed;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-    text-align: center;
-    margin-top: ;
-    color: white
+
 }
 
-
-#test {position: fixed;
-
-  text-align: center;
-  margin-top: ;
+.introduction {
+  text-align: center !important;
+}
+#slideSource {
+  opacity: 1;
+  transition: opacity 2s;
+}
+#cute {
+  opacity: 0;
 }
