--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,12 @@
 
 }
 
+#cute {
+
+}
+
 .page1{
+  overflow:scroll;
   height:100vh;
   -ms-background-size: cover;
   -o-background-size: cover;
@@ -17,17 +22,18 @@
   -webkit-background-size: cover;
   background-size: cover;
   width: 100%;
-
   z-index: 1;
-  background: linear-gradient(rgba(3, 30, 0, 0.5), rgba(0, 0, 0, 1)), url('./pics/computer-computer-keyboard-contemporary-display-257881.jpg');
-  opacity:   ;
+  background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+  font-family: 'Notable', sans-serif;
 
 }
-
+.introduction {
+  text-align: center !important;
+}
 
 #test {
-padding-top: 50vh;
-
+padding-top:5vh;
+font-size: 15vh;
 text-align: center;
 margin-top: ;
 }
