--- a/src/Overlay.css
+++ b/src/Overlay.css
@@ -34,7 +34,7 @@ p {
 .projects {
   border: solid;
   border-color: white;
-  opacity:0.5;
+  opacity:0.3;
   width:30vw;
 }
 .projects:hover{
@@ -66,6 +66,7 @@ p {
   top: 20px;
   right: 45px;
   font-size: 60px;
+  color:black !important;
 }
 
 .overlay a:hover, .overlay a:focus {
@@ -83,12 +84,13 @@ p {
   }
   .burger-overlay {
   cursor:"pointer";
+  color:black !important;
 
   }
   #navi {
       position:fixed !important;
       width:100%;
-      color: red;
+      color: black;
   }
 
 
