--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,12 @@
   top: 0;
   left: 0;
   font-family: 'Righteous', cursive;
-  font-size: 10px;
+  font-size: 1rem;
 
 }
 
 .cute {
- font-size: 30px;
+ font-size: 4rem;
 }
 a :hover {
   opacity: 0.5;
@@ -46,16 +46,11 @@ a :hover {
     top: 20%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 100px;
+    font-size: 10rem;
     text-align: center;
     z-index:0;
 }
 
-#slideSource{
-  font-size: 100px !important;
-  text-align: center;
-  z-index: -1;
-}
 
 .slideSource{
   font-size: 100px !important;
@@ -64,9 +59,25 @@ a :hover {
 
 .sidebar{
   font-size: 3vw;
-  height:30px;
+  height:3rem;
   z-index: 1 !important;
 }
 .proj {
   position:static;
+}
+@keyframes bounceIn {
+  0% {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+  60% {
+    transform: scale(1.2);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+.swing {
+  animation: bounceIn 2s;
 }
