--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,9 @@
   font-size: 5vh !important ;
   color: white !important ;
 }
+.center{
+  text-align: center;
+}
 
 .cute {
  font-size: 4rem;
@@ -52,8 +55,8 @@ a :hover {
     top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 10rem;
-    text-align: center;
+    font-size: 3rem;
+    text-align: center !important;
     z-index:0;
 }
 #black{
