--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,8 @@
 
 }
 
+
+
 .overlay p {
   font-size: 5vh !important ;
   color: white !important ;
@@ -18,6 +20,7 @@
 .cute {
  font-size: 4rem;
  display:none;
+ text-align: center;
 }
 a :hover {
   opacity: 0.5;
@@ -65,7 +68,6 @@ a :hover {
 
 .center{
   text-align: center !important;
-  font-size: 10rem;
 }
 .slideSource{
   font-size: 100px !important;
