--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,16 @@
 
 }
 
-
-
+.page2 {
+  height: 50vh;
+  background: linear-gradient(90deg, rgba(36,180,181,1) 11%, rgba(0,9,121,1) 100%);
+  color:black;
+  text-align: center;
+  font-size: 10vh;
+}
+.margin {
+  padding-top: 10%
+}
 .overlay p {
   font-size: 5vh !important ;
   color: white !important ;
