--- a/src/App.css
+++ b/src/App.css
@@ -8,13 +8,18 @@
   font-size: 1rem;
 
 }
-
+.margin {
+  top:200px;
+}
 .page2 {
   height: 40vh;
   background: black;
   color:white;
-  text-align: center;
+  text-align: center !important;
   font-size: 10vh;
+}
+#centered{
+  text-align: center !important;
 }
 .bottom {
   padding-top: 10%;
@@ -51,7 +56,7 @@ h4{
   background-size: cover;
   width: 100%;
   z-index: 1;
-  background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+  background-image: linear-gradient(190deg, #d4fc79 0%, #96e6a1 50%);
   font-family: 'Notable', sans-serif;
 
 }
@@ -71,7 +76,6 @@ h4{
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 3rem;
-      text-align: center;
     z-index:0;
 }
 #black{
@@ -110,8 +114,21 @@ h4{
 }
 .swing {
   display:none;
-  text-align: center;
 }
 .device {
   color:white;
+}
+#position{
+  display:none;
+  text-align: center !important;
+}
+#scroll {
+  text-align: center;
+  display:none;
+}
+
+.right-postion {
+  width:10%;
+  margin: auto;
+  text-align: center;
 }
