--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,9 @@
 #centered{
   text-align: center !important;
 }
+.centered{
+  text-align: center !important;
+}
 .bottom {
   padding-top: 10%;
   position: absolute;
@@ -128,6 +131,8 @@ h4{
 }
 
 .right-postion {
+  writing-mode: vertical-rl;
+text-orientation: mixed;
   width:10%;
   margin: auto;
   text-align: center;
