--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,17 @@
 
 }
 .margin {
-  top:200px;
+  top:400px;
+}
+.container{
+  width:50%;
+}
+
+.introduction{
+  padding-top: 3%;
+  border-color: black;
+  border-style: solid;
+  padding-bottom:3%;
 }
 .page2 {
   height: 40vh;
@@ -27,7 +37,7 @@
 .bottom {
   padding-top: 10%;
   position: absolute;
-  bottom: 0;
+  bottom: 1%;
   width: 100%;
   font-size: 1rem;
   }
@@ -59,7 +69,7 @@ h4{
   background-size: cover;
   width: 100%;
   z-index: 1;
-  background-image: linear-gradient(190deg, #d4fc79 0%, #96e6a1 50%);
+  background-image: linear-gradient(to left bottom, #0c336c, #13458a, #1759a9, #186dca, #1282eb);
   font-family: 'Notable', sans-serif;
 
 }
@@ -120,6 +130,8 @@ h4{
 }
 .device {
   color:white;
+  display:none;
+  textalign:center !important;
 }
 #position{
   display:none;
@@ -132,8 +144,76 @@ h4{
 
 .right-postion {
   writing-mode: vertical-rl;
-text-orientation: mixed;
+  text-orientation: mixed;
   width:10%;
   margin: auto;
   text-align: center;
+}
+
+
+.type {
+  border-right: solid 3px rgba(0,255,0,.75);
+  white-space: nowrap;
+  overflow: hidden;
+  font-family: 'Source Code Pro', monospace;
+  font-size: 2rem;
+  color: rgba(255,255,255,.70);
+  text-align: left ;
+  max-width: 100%;
+  display:none;
+}
+
+
+.type {
+  animation: animated-text 4s steps(65,end) 1s 1 normal both,
+             animated-cursor 600ms steps(29,end) infinite;
+}
+
+
+
+@keyframes animated-text{
+  from{width: 0;}
+  to{width: 100%;}
+}
+
+
+
+@keyframes animated-cursor{
+  from{border-right-color: rgba(0,255,0,.75);}
+  to{border-right-color: transparent;}
+}
+
+.type1 {
+  border-right: solid 3px rgba(0,255,0,.75);
+  white-space: nowrap;
+  overflow: hidden;
+  font-family: 'Source Code Pro', monospace;
+  font-size: 2rem;
+  color: rgba(255,255,255,.70);
+  text-align: left ;
+  max-width: 100%;
+  display:none;
+}
+
+
+.type1 {
+  animation: animated-text 4s steps(65,end) 1s 1 normal both,
+             animated-cursor 600ms steps(29,end) infinite;
+}
+.type2 {
+  border-right: solid 3px rgba(0,255,0,.75);
+  white-space: nowrap;
+  overflow: hidden;
+  font-family: 'Source Code Pro', monospace;
+  font-size: 2rem;
+  color: rgba(255,255,255,.70);
+  text-align: left ;
+  max-width: 100%;
+  display:none;
+}
+
+
+.type2 {
+  animation: animated-text 4s steps(65,end) 1s 1 normal both,
+             animated-cursor 600ms steps(29,end) infinite;
 }
