--- a/src/Overlay.css
+++ b/src/Overlay.css
@@ -8,7 +8,7 @@
     top: 0;
     left: 0;
     overflow-x: hidden;
-    opacity:0.98;
+    opacity:.999;
     transition: 1s;
     background: black; /* fallback for old browsers */
     background-size:contain;
