--- a/src/App.css
+++ b/src/App.css
@@ -149,6 +149,8 @@ h4{
 
 
 .type {
+  border-right: solid 3px white;
+  white-space: nowrap;
   overflow: hidden;
   font-family: 'Source Code Pro', monospace;
   font-size: 2rem;
